[gd_scene load_steps=3 format=3 uid="uid://cadtjg5c0hg6q"]

[ext_resource type="Script" path="res://src/plant/sun_flower/sun_flower.gd" id="1_2e5tc"]
[ext_resource type="PackedScene" uid="uid://bgq0f6devxwdy" path="res://src/plants_anim/plants_anim.tscn" id="2_3fcqq"]

[node name="sun_flower" type="Node2D"]
script = ExtResource("1_2e5tc")

[node name="plants_anim" parent="." instance=ExtResource("2_3fcqq")]
animation = &"peas_hooter"
frame_progress = 0.0

[node name="product_timer" type="Timer" parent="."]

[connection signal="timeout" from="product_timer" to="." method="_on_product_timer_timeout"]
